Thu Sep 30 07:09:50 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3896_Regression/Hello.cpp:
        * tests/Bug_3896_Regression/client.cpp:
          Added include to get sleep

Thu Sep 30 05:46:16 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Encoder.h:
          Removed comments refering to ACE_Pair.

Wed Sep 29 19:53:17 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/ImplRepo/Bug_689_Regression/bug_689_regression.idl:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/bug_689_regression_i.h:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/bug_689_regression_i.cpp:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/client.cpp:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/run_test.pl:

          Added a no-op two way CORBA call from client to server to make sure
          they are connected before the shutdown() call.  The implicit call to
          _is_a() used to do this, but now with the change from
          Mon Sep 27 14:25:28 UTC 2010  Adam Mitz  <mitza@ociweb.com>
          the _is_a() is no longer needed.

Wed Sep 29 13:35:11 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
        * tests/Bug_3896_Regression:
        * tests/Bug_3896_Regression/Bug_3896_Regression.mpc:
        * tests/Bug_3896_Regression/Hello.h:
        * tests/Bug_3896_Regression/Hello.cpp:
        * tests/Bug_3896_Regression/Test.idl:
        * tests/Bug_3896_Regression/client.cpp:
        * tests/Bug_3896_Regression/run_test.pl:
        * tests/Bug_3896_Regression/server.cpp:
          Added new regression test to validate that an invocation that is
          aborted because of an orb shutdown gives a comm_failure exception
          and not a timeout

        * tests/No_Server_MT_Connect_Test/client.cpp:
          layout changes

Wed Sep 29 12:21:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
